# Gemini-dj

./: .env.example  README.md  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  screenshot.py  server.ts  start_server.sh  test_ui.py  verify_frontend.py  verify_ux.py  vite.config.ts
.Jules/: palette.md
crimson/: CMakeLists.txt  C_ARCHITECTURE.md
crimson/include/: mcp_device_manager.h  sovereign_json.h
crimson/include/ai/: ai_client.h
crimson/include/core/: audio_engine.h
crimson/include/crimson/ai/: AIClient.hpp
crimson/include/crimson/audio/: AudioEngine.hpp  Deck.hpp
crimson/include/crimson/core/: RingBuffer.hpp
crimson/include/http/: http_server.h
crimson/src/: main.c  main.cpp
crimson/src/ai/: AIClient.cpp  ai_client.c
crimson/src/audio/: AudioEngine.cpp  Deck.cpp
crimson/src/core/: audio_engine.c
crimson/src/server/: lux_server.cpp  mcp_device_manager.cpp
src/: App.tsx  index.css
src/components/: DJChat.tsx  Deck.tsx  Icons.tsx  Library.tsx  Mixer.tsx  Visualizer.tsx
src/hooks/: useAudioDeck.test.ts  useAudioDeck.ts  useAutoDJ.ts
src/lib/: AudioEngine.ts  constants.ts
